# password-vault

./: .gitignore  package-lock.json  package.json
app/: page.tsx
app/[loginSignup]/: page.tsx
components/: loginSignup.tsx  masterkey.tsx  navBar.tsx
src-tauri/: Cargo.toml  passwd  tauri.conf.json
src-tauri/src/: apis.rs  cipher.rs  main.rs  vault.rs
src-tauri/src/utils/: encryption.rs
